# Console-Apps-with-cpp

./: README.md
Consult_price_register/Consult_price_register2/: Consult_price_register2.cbp  Consult_price_register2.depend  Consult_price_register2.layout  main.cpp  register.txt
Consult_price_register/code_generator_n_tester/: code_generator_n_tester.cbp  code_generator_n_tester.depend  code_generator_n_tester.layout  main.c
Data-Structures-and-Algorithms/: 8_Queens_problem.cpp  add_two_numbers_leetcode.cpp  binary_search.cpp  binary_search_tree.hpp  binary_search_tree_implementation.cpp  birthday_cake_HackerRank_Challenge.cpp  bulb_switcher.cpp  canSum_problem.cpp  checkForBalancedParentheses.cpp  check_if_given_BT_is_BST.cpp  closest_coin_problem.cpp  containers_arrays.cpp  containers_deques.cpp  containers_lists.cpp  containers_map.cpp  containers_maps.cpp  containers_sets.cpp  containers_unordered_maps.cpp  containers_unordered_sets.cpp  containers_vectors.cpp  counting_sort.cpp  dice_rolls_and_sum.cpp  doubly_linked_list_implementation.cpp  gridTraveller_Challenge.cpp  lonely_integer_HackerRank_Challenge.cpp  longest_palindromic_substring.cpp  longest_substring_with_no_repeat.cpp  merge_sort.cpp  mini_max_sum_HackerRank_Challenge.cpp  permute_a_string.cpp  possible_sublists_with_backtracking.cpp  postfix_expression_evaluation.cpp  printBinary_with_backtracking.cpp  queue_using_linked_list.cpp  quick_sort.cpp  quick_sort2.cpp  radix_sort.cpp  singly_linked_list_implementation.cpp  stringStream_Challenger_HackerRank.cpp  stringstream_HackerRank_Challenge.cpp  (+7 more)
modern-cpp-concepts/: 1_abstract_base_class.cpp  CMakeLists.txt  LightnDarkThemeAbstractFactory.cpp  MixedFraction.cppm  MixedFraction.ixx  README.md  bitwise_operators.cpp  c++_iterators.cpp  constexpr_keyword.cpp  formatter_example.cpp  formatter_example.cppm  modern_memory_mgmt.cpp  print.hpp  stl_algorithms_demo.cpp  the_std_format.cpp  the_std_number.cpp
modern-cpp-concepts/include/: print.hpp
